# AiDDFinal_9

./: .env.example  .gitignore  README.md  campus_resource_hub_schema.sql  pyproject.toml  render.yaml  requirements.txt
.prompt/: dev_notes.md  golden_prompts.md
docs/: Security.md
docs/context/APA/: README.md
docs/context/DT/: README.md
docs/context/PM/: README.md
docs/shared/: glossary.md  okrs.md
src/: __init__.py  app.py  config.py  wsgi.py
src/controllers/: __init__.py  admin.py  auth.py  bookings.py  messaging.py  resources.py  reviews.py  search.py
src/data_access/: bookings_dao.py  db.py  messages_dao.py  resources_dao.py  reviews_dao.py  seed.py  users_dao.py
src/models/: entities.py
src/static/css/: style.css
src/static/js/: main.js
src/views/: admin_analytics.html  admin_bookings.html  admin_dashboard.html  admin_resources.html  admin_thread_detail.html  admin_threads.html  admin_users.html  auth_login.html  auth_register.html  bookings_my.html  bookings_pending.html  error.html  index.html  messaging_inbox.html  messaging_thread.html  resource_detail.html  resources_form.html  resources_list.html  reviews_section.html
src/views/layouts/: base.html
src/views/partials/: flash.html  nav.html  pagination.html  resource_macros.html
tests/: conftest.py  test_auth.py  test_booking_conflicts.py  test_dal.py  test_search_filters.py  test_threads.py
